--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 
     <div class="grid-container"></div>
 
+    <button id="btn">prova</button>
+
+
+    
     <script src="../etch-a-sketch/index.js"></script>
+
+   
 
 </body>
 
